# lcbci

./: .gitmodules  64855623.csv  README.md  faculty-human-subjects-application_0.doc  raise_poster.md  ~$b-exemption.doc
Notes/: notes-06-01.txt
arduino/: README.md
arduino/100Hz/: 100Hz.ino
arduino/200Hz/: 200Hz.ino
datasheets/: README.md
files/: data_list.py  debugging.py  lcbci_lab.py  old_lcbci_lab.py  sprite_extraction.py  test.py  test_ping.ino  test_pyserial.py  windows.py
files/gui/: flicker_lab.py  lcbci_lab.py
files/lcbci_lab/: pyqt_serial.py
files/lcbci_lab/lcbci_lab/: _app.py  lcbci.code-workspace  lcbci_lab.py
files/lcbci_lab/lcbci_lab.egg-info/: PKG-INFO  SOURCES.txt
files/serial_plotting_tutorials/: serial_plotter.py
files/serial_plotting_tutorials/arduino/: arduino.ino
guis/: README.md
guis/pyqt5/: _widgets.py
guis/pyqt5/lcbci_lab_pyqt5/: pyproject.toml
guis/pyqt5/lcbci_lab_pyqt5/lcbci_lab/: _backend.py  _widgets.py
guis/pyqt5/lcbci_lab_pyqt5/lcbci_lab.egg-info/: requires.txt  top_level.txt
guis/pyqt5/lcbci_lab_pyqt5/tests/: test_lcbci_lab.py
misc/: README.md
papers/: README.md
photos/: README.md
